# parquet_prefetch

./: Cargo.toml  LICENSE  README.md
src/: error.rs  fs.rs  lib.rs  opendal_fs.rs  parquet_reader.rs
