[package]
name = "parquet_prefetch"
version = "0.1.0"
edition = "2024"

[dependencies]
parquet = { version = "54.1.0", features = ["async", "cli", "crc"] }
opendal = { version = "0.51.2", features = ["services-fs", "services-s3"] }
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
bytes = "1.10.0"